Changelog 1.0.0-1.20.4:

- Ported from 1.0.7-1.20.4 [FORGE] to 1.0.0-1.20.4 [FABRIC]

Changelog 1.0.1-1.20.4:

- Updated Fabric to 0.15.11
- Added Banner Support for every non-translucent Shield
- Enhanced Creative Mode Tab

- ToDo: Adding Translations for Banner Shields
        Making the same shit for Forge and every other version