@@ -34,12 +34,12 @@
 		},
 		"fixed": {
 			"rotation": [ 0, 180, 0 ],
-			"translation": [ -2, 4, -5],
-			"scale":[ 0.5, 0.5, 0.5]
+			"translation": [ -4.5, 4.5, -5],
+			"scale":[ 0.55, 0.55, 0.55]
 		},
 		"ground": {
 			"rotation": [ 0, 0, 0 ],
-			"translation": [ 4, 4, 2],
+			"translation": [ 2, 4, 2],
 			"scale":[ 0.25, 0.25, 0.25]
 		}
 	},
