@@ -7,6 +7,7 @@ Changelog 1.0.1-1.20.4:
 - Updated Fabric to 0.15.11
 - Added Banner Support for every non-translucent Shield
 - Enhanced Creative Mode Tab
+- Fixed Shield Scaling
 
 - ToDo: Adding Translations for Banner Shields
         Making the same shit for Forge and every other version
